# proxy-wasm-rust-sdk

./: BUILD  Cargo.toml  README.md  azure-pipelines.yml  search-index.js  settings.html  source-files.js
.github/workflows/: rust.yml
bazel/cargo/: BUILD.bazel  crates.bzl
examples/: BUILD  hello_world.rs  http_auth_random.rs  http_body.rs  http_config.rs  http_headers.rs
proxy_wasm_experimental/: all.html  fn.proxy_abi_version_0_1_0.html  fn.proxy_abi_version_0_2_0.html  fn.set_http_context.html  fn.set_log_level.html  fn.set_root_context.html  fn.set_stream_context.html  index.html  sidebar-items.js
proxy_wasm_experimental/bytestring/: struct.ByteString.html
proxy_wasm_experimental/error/: index.html  sidebar-items.js  struct.HostCallError.html  struct.HostResponseError.html  type.Error.html  type.Result.html
proxy_wasm_experimental/hostcalls/: constant.NO_BODY.html  constant.NO_HEADERS.html  constant.NO_TRAILERS.html  fn.add_map_value.html  fn.clear_http_route_cache.html  fn.close_stream.html  fn.continue_stream.html  fn.define_metric.html  fn.dequeue_shared_queue.html  fn.dispatch_http_call.html  fn.done.html  fn.enqueue_shared_queue.html  fn.get_buffer.html  fn.get_configuration.html  fn.get_current_time.html  fn.get_map.html  fn.get_map_value.html  fn.get_metric.html  fn.get_property.html  fn.get_shared_data.html  fn.increment_metric.html  fn.log.html  fn.record_metric.html  fn.register_shared_queue.html  (+13 more)
src/: allocator.rs  bytestring.rs  dispatcher.rs  error.rs  hostcalls.rs  lib.rs  logger.rs  traits.rs  types.rs
tests/: version-numbers.rs
(+91 files in other folders)
