[package]
name = "proxy-wasm-experimental"
version = "0.0.7"
authors = ["Piotr Sikora <piotrsikora@google.com>", "Yaroslav Skopets <yaroslav@tetrate.io>"]
description = "WebAssembly for Proxies"
readme = "README.md"
license = "Apache-2.0"
repository = "https://github.com/yskopets/proxy-wasm-rust-sdk"
edition = "2018"

[dependencies]
hashbrown = { version = "0.7", default-features = false, features = ["ahash", "inline-more"] }
log = "0.4"
wee_alloc = "0.4"

[dev-dependencies]
version-sync = "0.9"
chrono = "0.4"
bstr = "0.2"

[profile.release]
lto = true
opt-level = 3
panic = "abort"

[[example]]
name = "hello_world"
path = "examples/hello_world.rs"
crate-type = ["cdylib"]

[[example]]
name = "http_auth_random"
path = "examples/http_auth_random.rs"
crate-type = ["cdylib"]

[[example]]
name = "http_headers"
path = "examples/http_headers.rs"
crate-type = ["cdylib"]
